--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 html {
-    font-family: 'Poppins', sans-serif;
     background-color: #e7f1f1;
 }
 
 header {
-    font-size: 7rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bolder;
+    font-size: 4rem;
     text-align: center;
-
+    padding: 50px;
 }
 
 section {
@@ -14,9 +15,40 @@ section {
     justify-content: center;
 }
 
+.box-title {
+    padding: 10px;
+}
+
 .color-box {
-    height: 100px;
-    width: 100px;
-    border: solid
-    
+    height: 150px;
+    width: 150px;
+    border: solid;
+}
+
+.hex-code {
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-weight: 50;
+    padding-top: 5px;
+    font-size: 1.2em;
+}
+
+#b1 {
+    background-color: #EA9999;
+}
+
+#b2 {
+    background-color: #FACB9C;
+}
+
+#b3 {
+    background-color: #FFE59A;
+}
+
+#b4 {
+    background-color: #B6D7A8;
+}
+
+#b5 {
+    background-color: #A4C4CA;
 }
