--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
 html {
+    height: 100%;
     background-color: #e7f1f1;
+}
+
+body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 header {
@@ -7,7 +15,6 @@ header {
     font-weight: bolder;
     font-size: 4rem;
     text-align: center;
-    padding: 50px;
 }
 
 section {
@@ -26,23 +33,22 @@ button {
     border: none;
 }
 
-.button-boxL {
+.button-box-l {
     height: auto;
     width: 50px;
     background-color: #000000;
     border-bottom-left-radius: 100%;
 }
 
-.button-boxR {
+.button-box-r {
     height: auto;
     width: 50px;
     background-color: #000000;
     border-top-right-radius: 100%;
 }
 
-.box-title {
+.color-container {
     padding: 10px;
-    margin-bottom: 20px;
 }
 
 .color-box {
