--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,24 @@ button {
 }
 
 .color-box {
+    position: relative;
     height: 150px;
     width: 150px;
     border: solid;
+}
+
+.lock-box {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 30px;
+    width: 30px;
+    padding: 8px;
+    text-align: center;
+}
+
+.lock-box:hover {
+    transform: scale(1.3);
 }
 
 .hex-code {
