--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,17 @@ main {
     min-width: 950px;
 }
 
+h1 {
+    margin: 0;
+}
+
 h2 {
     font-size: 2.3rem;
     margin: 0 0 30px 0;
+}
+
+p {
+    font-size: 1.5rem;
 }
 
 header {
@@ -138,4 +146,8 @@ button {
 
 #b5 {
     background-color: #A4C4CA;
+}
+
+.hidden {
+    display: none;
 }
