--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,9 @@ button {
 
 .mini-container {
     display: flex;
+    align-items: center;
     margin-bottom: 25px;
+    margin-left: 10px;
 }
 
 .mini-box {
@@ -106,6 +108,13 @@ button {
     width: 40px;
     border: 4px solid;
     margin: 0 4px;
+}
+
+.delete-button {
+    height: 38px;
+    width: 38px;
+    border: none;
+    padding: 0 20px;
 }
 
 .lock-box {
