Adds the delete palette confirmation modal and functionality

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ header {
 }
 
 button {
-    
     background-color: #000000;
     color: #FFFFFF;
     padding-top: 10px;
@@ -156,6 +155,33 @@ button {
 
 #b5 {
     background-color: #A4C4CA;
+}
+
+.modal-window {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 350px;
+    width: 350px;
+    border: 4px solid;
+    border-radius: 10%;
+    font-size: x-large;
+}
+
+#modalText {
+    padding: 10px;
+}
+
+#deletePaletteButton {
+    border-radius: 15px;
+}
+
+.modal-exit-button {
+    height: 38px;
+    width: 38px;
+    border: none;
+    padding-left: 60%;
 }
 
 .hidden {
