--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ button {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    translate: -50% -50%;
     height: 350px;
     width: 350px;
     background-color: #e7f1f1;
