--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ header {
 }
 
 .main-display,
-.button-area {
+.button-area,
+.mini-colors {
     display: flex;
     justify-content: center;
 }
@@ -188,7 +189,8 @@ button {
     height: 38px;
     width: 38px;
     border: none;
-    padding-left: 60%;
+    translate: 350%;
+    /* padding-left: 60%; */
 }
 
 .hidden {
