--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ button {
     display: inline-flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     justify-content: space-around;
     position: absolute;
     top: 50%;
@@ -168,6 +169,19 @@ button {
 #deletePaletteButton {
     border-radius: 15px;
     padding: 10px;
+}
+
+#savePaletteButton {
+    border-radius: 15px;
+    padding: 10px;
+}
+
+#paletteNameInput {
+    height: 50px;
+    width: 250px;
+    text-align: center;
+    font-size: x-large;
+    font-weight: 300;
 }
 
 .modal-exit-button {
